--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
     "xutility": "cpp",
     "system_error": "cpp",
     "type_traits": "cpp",
-    "xtr1common": "cpp"
+    "xtr1common": "cpp",
+    "cstdio": "cpp"
   }
 }
