Chapter 17-Making Constructive Arguments

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
     "system_error": "cpp",
     "type_traits": "cpp",
     "xtr1common": "cpp",
-    "cstdio": "cpp"
+    "cstdio": "cpp",
+    "ostream": "cpp"
   }
 }
