--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
     "cstdio": "cpp",
     "ostream": "cpp",
     "cstdlib": "cpp",
-    "xlocale": "cpp"
+    "xlocale": "cpp",
+    "iosfwd": "cpp"
   }
 }
